<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/button_sound1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="@android:color/transparent"
        android:onClick="playSound"
        android:text="@string/look_fat"
        android:textColor="#831111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sound4"
        app:layout_constraintVertical_bias="0.082"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_sound2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="204dp"
        android:layout_marginRight="204dp"
        android:layout_marginBottom="500dp"
        android:background="@android:color/transparent"
        android:onClick="playSound"
        android:text="@string/you_are_a_liar"
        android:textColor="#73230A"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sound4"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/button_sound3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:background="@android:color/transparent"
        android:onClick="playSound"
        android:text="@string/poor_children"
        android:textColor="#EC0505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sound4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:onClick="playSound"
        android:text="@string/jack"
        android:textColor="#730000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sound3" />

    <Button
        android:id="@+id/button_sound5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:onClick="playSound"
        android:text="@string/nani"
        android:textColor="#983737"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sound4" />

</androidx.constraintlayout.widget.ConstraintLayout>